@@ -1,4 +1,5 @@
 1.70 (XXXX-XX-XX):
+  Fix issue MR-68 - Config Window Loses Options
   Fix issue MR-77 - VerifyDatabaseVersion (Config.Connections.Save) failed. Version string portion was too short or too long.
   Fix issue MR-78 - Renaming Connections
   Fix issue MR-79 - MoveUp/Down item doesn't work + Sort button broken
@@ -7,6 +8,7 @@
   Fix issue MR-98 - Integrate Russian and Ukranian translations
   Fix issue MR-99 - Integrate Spanish translation
   Fix issue MR-131 - RD Gateway does not respect setting for use different credentials
+  Fix issue MR-277 - Inheritance configuration button not appear in configuration tab 
   Fix issue MR-306 - Fatal .NET exception on program start
   Added compatibility check for "Use FIPS compliant algorithms" security setting.
   Improved reporting of errors when encrypting and decrypting connection files.
